--- a/components/Header/styles.module.css
+++ b/components/Header/styles.module.css
@@ -70,8 +70,7 @@
 }
 
 @media (min-width: 768px) {
-
-    .header{
+    .header {
         padding: 10px 20px;
     }
 
@@ -106,5 +105,31 @@
 
     .icons {
         margin: 0 0 0 30px;
+        gap: 20px;
+    }
+
+    .link {
+        position: relative;
+        overflow: hidden;
+        display: inline-block;
+        height: 1.4em;
+    }
+
+    .link::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 0.1em;
+        background-color: var(--light);
+        opacity: 0;
+        transform: translate3d(-100%, 0, 0);
+        transition: all 1s;
+    }
+
+    .link:hover::after{
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
     }
 }
