--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,67 +1,285 @@
-.start{
-    
+.start {
+    display: flex;
+    flex-direction: column;
+    min-height: 90vh;
+    align-items: center;
+    justify-content: center;
+    background-image: url('/images/kitchen.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    overflow: hidden;
+    padding: 20px;
 }
 
-.start__title{
-
+.start::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.6);
+    z-index: 0;
 }
 
-.start__subtitle{
-
+.start > * {
+    position: relative;
+    z-index: 1;
 }
 
-.start__div{
-
+.start__title {
+    text-align: center;
+    font-size: 2rem;
+    color: var(--dark);
 }
 
-.start__button{
-
+.start__subtitle {
+    margin-top: 15px;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 400;
+    color: var(--dark);
 }
 
-.categories{
-
+.start__div {
+    margin-top: 30px;
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
 }
 
-.categories__title{
-
+.start__button {
+    border: none;
+    border-radius: 15px;
+    padding: 15px 40px;
+    font-size: 1.2rem;
+    font-weight: 700;
 }
 
-.categories__list{
-
+.start__button:nth-child(1) {
+    background: var(--primary);
+    color: var(--white);
 }
 
-.categories__item{
-
+.start__button:nth-child(2) {
+    background: none;
+    color: var(--primary);
+    border: 1px solid var(--primary);
 }
 
-.products{
-
+.start__button:hover {
+    background: var(--accent);
 }
 
-.products__title{
-
+.categories {
+    background: linear-gradient(to bottom right, var(--primary), var(--dark));
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 90vh;
+    padding: 20px;
 }
 
-.products__list{
-
+.categories__title {
+    text-align: center;
+    font-size: 1.5rem;
+    color: var(--light);
 }
 
-.products__item{
-
+.categories__list {
+    margin-top: 2rem;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 
-.why{
-
+.categories__item {
+    border: none;
+    border-radius: 15px;
+    padding: 5px 20px;
+    font-size: 0.9rem;
+    font-weight: 700;
+    background: none;
+    color: var(--light);
+    border: 1px solid var(--light);
+    transition: all 0.3s ease;
 }
 
-.why__title{
-
+.categories__item:hover {
+    background: var(--light);
+    color: var(--primary);
+    cursor: pointer;
 }
 
-.why__list{
-
+.products {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 90vh;
 }
 
-.why__item{
+.products__title {
+    text-align: center;
+    font-size: 1.5rem;
+    color: var(--dark);
+}
 
+.products__list {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    list-style: none;
+}
+
+.products__item {
+    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.products__item img {
+    width: 50%;
+    margin: 0;
+    height: fit-content;
+    border-radius: 10px;
+}
+
+.products__item h4 {
+    padding: 0 10px;
+    text-transform: capitalize;
+    font-weight: 300;
+    font-size: 1.2rem;
+    color: var(--dark);
+}
+
+.products__item button {
+    border: none;
+    border-radius: 0 0 10px 10px;
+    width: 100%;
+    padding: 10px 20px;
+    font-size: 1rem;
+    font-weight: 700;
+    background: var(--primary);
+    color: var(--white);
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+.products__item button:hover {
+    background: var(--accent);
+}
+
+.why {
+    min-height: 90vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    background: var(--light);
+}
+
+.why__title {
+    text-align: center;
+    font-size: 1.5rem;
+    color: var(--dark);
+}
+
+.why__list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-top: 4rem;
+}
+
+.why__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    text-align: center;
+}
+
+.why__item svg {
+    width: 50px;
+    height: 50px;
+    color: var(--primary);
+}
+
+.why__item h3 {
+    font-size: 1.2rem;
+    color: var(--dark);
+}
+
+.why__item p {
+    font-size: 1rem;
+    color: var(--dark);
+}
+
+@media (min-width: 768px) {
+    .start__title {
+        font-size: 3rem;
+    }
+
+    .start__subtitle {
+        font-size: 2rem;
+    }
+
+    .start__div {
+        flex-direction: row;
+    }
+
+    .categories__list {
+        justify-content: center;
+    }
+
+    .products {
+        padding: 40px;
+    }
+
+    .products__list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .products__item {
+        width: 250px;
+        height: 250px;
+    }
+
+    .products__item img {
+        width: auto;
+        max-width: 100%;
+        max-height: 50%;
+        margin: auto;
+        object-fit: cover;
+    }
+
+    .products__item h4{
+        font-size: 1rem;
+    }
+
+    .why__list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .why__item {
+        width: 200px;
+    }
 }
