--- a/app/globals.css
+++ b/app/globals.css
@@ -21,3 +21,9 @@ a {
     color: inherit;
     text-decoration: none;
 }
+
+main {
+    display: flex;
+    flex-direction: column;
+    min-height: 90dvh;
+}
