--- a/app/page.module.css
+++ b/app/page.module.css
@@ -117,6 +117,7 @@
 }
 
 .products {
+    background: var(--light);
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -132,53 +133,8 @@
 }
 
 .products__list {
-    margin-top: 2rem;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    list-style: none;
-}
-
-.products__item {
-    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.products__item img {
-    width: 50%;
-    margin: 0;
-    height: fit-content;
-    border-radius: 10px;
-}
-
-.products__item h4 {
-    padding: 0 10px;
-    text-transform: capitalize;
-    font-weight: 300;
-    font-size: 1.2rem;
-    color: var(--dark);
-}
-
-.products__item button {
-    border: none;
-    border-radius: 0 0 10px 10px;
-    width: 100%;
-    padding: 10px 20px;
-    font-size: 1rem;
-    font-weight: 700;
-    background: var(--primary);
-    color: var(--white);
-    cursor: pointer;
-    transition: background 0.3s ease;
-}
-
-.products__item button:hover {
-    background: var(--accent);
+    width: 90%;
+    margin: 2rem auto;
 }
 
 .why {
@@ -188,7 +144,7 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
-    background: var(--light);
+    background: var(--white);
 }
 
 .why__title {
@@ -248,29 +204,6 @@
 
     .products {
         padding: 40px;
-    }
-
-    .products__list {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    .products__item {
-        width: 250px;
-        height: 250px;
-    }
-
-    .products__item img {
-        width: auto;
-        max-width: 100%;
-        max-height: 50%;
-        margin: auto;
-        object-fit: cover;
-    }
-
-    .products__item h4{
-        font-size: 1rem;
     }
 
     .why__list {
