--- a/components/Product/Filter/page.module.css
+++ b/components/Product/Filter/page.module.css
@@ -24,6 +24,7 @@
     border-radius: 6px;
     font-size: 1.1rem;
     cursor: pointer;
+    text-transform: capitalize;
 }
 
 @media (min-width: 768px) {
