--- a/app/page.module.css
+++ b/app/page.module.css
@@ -4,29 +4,32 @@
     min-height: 90vh;
     align-items: center;
     justify-content: center;
-    background-image: url('/images/kitchen.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
     position: relative;
     overflow: hidden;
     padding: 20px;
 }
 
-.start::before {
-    content: '';
+.startImage {
+    object-fit: cover;
+    object-position: center;
+    z-index: 0;
+}
+
+.startOverlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(255, 255, 255, 0.6);
-    z-index: 0;
+    z-index: 1;
 }
 
-.start > * {
+.start > h2,
+.start > h3,
+.start > div {
     position: relative;
-    z-index: 1;
+    z-index: 2;
 }
 
 .start__title {
